# ecuas

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ecuas/: __init__.py  base.py  classification.py  confidences.py  constants.py  py.typed  utils.py
tests/: test_classification.py  test_confidences.py  test_regression.py
