[project]
name = "ecuas"
version = "0.1.0"
description = "Expected Cost for Uncertainty-Augmented Systems — metrics for evaluating calibration and selective prediction"
readme = "README.md"
authors = [
    { name = "Erik Ernst", email = "erik_ernst@hotmail.com.ar" }
]
requires-python = "~=3.13.0"
dependencies = [
    "lightning>=2.6.4",
    "numpy>=2.4.6",
    "rich>=15.0.0",
    "torch>=2.12.0",
    "torch-uncertainty>=0.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ecuas"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]
